# Various-Visualizations

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  mainwindow.cpp  mainwindow.ui  sortvisualizer.cpp  sortvisualizer.h
Sorters/: CMakeLists.txt  abstractsorter.cpp  abstractsorter.h  bubblesorter.cpp  bubblesorter.h  insertionsorter.cpp  insertionsorter.h  mergesorter.cpp  mergesorter.h  quicksorter.cpp  quicksorter.h  selectionsorter.cpp  selectionsorter.h
src/GUI/: CMakeLists.txt  categorymenu.cpp  categorymenu.h  categorymenu.ui  collisiondetectionpage.cpp  collisiondetectionpage.h  collisiondetectionpage.ui  collisionvisualizer.cpp  collisionvisualizer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  pathfindingpage.cpp  pathfindingpage.h  pathfindingpage.ui  sortpage.cpp  sortpage.h  sortpage.ui  sortvisualizer.cpp  sortvisualizer.h
src/Sorters/: CMakeLists.txt  bubblesorter.h  insertionsorter.cpp  mergesorter.h  oddandevensorter.cpp  oddandevensorter.h  quicksorter.h  sorter.h  sorters.h
src/Utilities/: CMakeLists.txt  utils.cpp  utils.h
